Use Boolean class sensibly